--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
+    <script src="quiz.json" defer></script>
     <title>QUIZZ</title>
 </head>
 
@@ -21,7 +22,7 @@
     </header>
     <main>
         <form action="">
-            <div class="content"></div>
+            <div id="question1" class="content"></div>
             <div class="input">
                 <input type="checkbox" name="" id="checkbox">
                 <label for=""></label>
@@ -32,7 +33,7 @@
                 <input type="checkbox" name="" id="checkbox">
                 <label for=""></label>
             </div>
-            <div class="content"></div>
+            <div id="question2" class="content"></div>
             <div class="input">
                 <input type="checkbox" name="" id="checkbox">
                 <label for=""></label>
@@ -43,7 +44,7 @@
                 <input type="checkbox" name="" id="checkbox">
                 <label for=""></label>
             </div>
-            <div class="content"></div>
+            <div  id="question3"  class="content"></div>
             <div class="input">
                 <input type="checkbox" name="" id="checkbox">
                 <label for=""></label>
@@ -54,7 +55,7 @@
                 <input type="checkbox" name="" id="checkbox">
                 <label for=""></label>
             </div>
-            <div class="content"></div>
+            <div id="question4"  class="content"></div>
             <div class="input">
                 <input type="checkbox" name="" id="checkbox">
                 <label for=""></label>
@@ -73,6 +74,7 @@
     <footer>
 
     </footer>
+
 </body>
 
 </html>
