--- a/index.html
+++ b/index.html
@@ -24,47 +24,79 @@
         <form action="">
             <div id="question1" class="content"></div>
             <div class="input">
-                <input type="checkbox" name="" id="checkbox">
-                <label for=""></label>
-                <input type="checkbox" name="" id="checkbox">
-                <label for=""></label>
-                <input type="checkbox" name="" id="checkbox">
-                <label for=""></label>
-                <input type="checkbox" name="" id="checkbox">
-                <label for=""></label>
+                <div class="reponse">
+                <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
+                <label for="" class="label_response"></label>
+                </div>
+                <div class="reponse">
+                    <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
+                    <label for="" class="label_response"></label>
+                    </div>
+                    <div class="reponse">
+                        <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
+                        <label for="" class="label_response"></label>
+                        </div>
+                        <div class="reponse">
+                            <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
+                            <label for="" class="label_response"></label>
+                            </div>
             </div>
             <div id="question2" class="content"></div>
             <div class="input">
-                <input type="checkbox" name="" id="checkbox">
-                <label for=""></label>
-                <input type="checkbox" name="" id="checkbox">
-                <label for=""></label>
-                <input type="checkbox" name="" id="checkbox">
-                <label for=""></label>
-                <input type="checkbox" name="" id="checkbox">
-                <label for=""></label>
+                <div class="reponse">
+                <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
+                <label for="" class="label_response"></label>
+                </div>
+                <div class="reponse">
+                    <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
+                    <label for="" class="label_response"></label>
+                    </div>
+                    <div class="reponse">
+                        <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
+                        <label for="" class="label_response"></label>
+                        </div>
+                        <div class="reponse">
+                            <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
+                            <label for="" class="label_response"></label>
+                            </div>
             </div>
             <div  id="question3"  class="content"></div>
             <div class="input">
-                <input type="checkbox" name="" id="checkbox">
-                <label for=""></label>
-                <input type="checkbox" name="" id="checkbox">
-                <label for=""></label>
-                <input type="checkbox" name="" id="checkbox">
-                <label for=""></label>
-                <input type="checkbox" name="" id="checkbox">
-                <label for=""></label>
+                <div class="reponse">
+                <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
+                <label for="" class="label_response"></label>
+                </div>
+                <div class="reponse">
+                    <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
+                    <label for="" class="label_response"></label>
+                    </div>
+                    <div class="reponse">
+                        <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
+                        <label for="" class="label_response"></label>
+                        </div>
+                        <div class="reponse">
+                            <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
+                            <label for="" class="label_response"></label>
+                            </div>
             </div>
             <div id="question4"  class="content"></div>
             <div class="input">
-                <input type="checkbox" name="" id="checkbox">
-                <label for=""></label>
-                <input type="checkbox" name="" id="checkbox">
-                <label for=""></label>
-                <input type="checkbox" name="" id="checkbox">
-                <label for=""></label>
-                <input type="checkbox" name="" id="checkbox">
-                <label for=""></label>
+                <div class="reponse">
+                <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
+                <label for="" class="label_response"></label>
+                </div>
+                <div class="reponse">
+                    <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
+                    <label for="" class="label_response"></label>
+                    </div>
+                    <div class="reponse">
+                        <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
+                        <label for="" class="label_response"></label>
+                        </div>
+                        <div class="reponse">
+                            <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
+                            <label for="" class="label_response"></label>
+                            </div>
             </div>
             <div class="button">
                 <input type="button" value="valider" class="btn">
