--- a/index.html
+++ b/index.html
@@ -26,38 +26,38 @@
             <div class="input">
                 <div class="reponse">
                 <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
-                <label for="" class="label_response"></label>
+                <label for="" id="label_response1"></label>
                 </div>
                 <div class="reponse">
                     <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
-                    <label for="" class="label_response"></label>
+                    <label for="" id="label_response2"></label>
                     </div>
                     <div class="reponse">
                         <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
-                        <label for="" class="label_response"></label>
+                        <label for="" id="label_response3"></label>
                         </div>
                         <div class="reponse">
                             <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
-                            <label for="" class="label_response"></label>
+                            <label for="" id="label_response4"></label>
                             </div>
             </div>
             <div id="question2" class="content"></div>
             <div class="input">
                 <div class="reponse">
                 <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
-                <label for="" class="label_response"></label>
+                <label for="" id="label_response1"></label>
                 </div>
                 <div class="reponse">
                     <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
-                    <label for="" class="label_response"></label>
+                    <label for="" id="label_response2"></label>
                     </div>
                     <div class="reponse">
                         <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
-                        <label for="" class="label_response"></label>
+                        <label for="" id="label_response3"></label>
                         </div>
                         <div class="reponse">
                             <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
-                            <label for="" class="label_response"></label>
+                            <label for="" id="label_response4"></label>
                             </div>
             </div>
             <div  id="question3"  class="content"></div>
