--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="bad"></div>
     </header>
     <main>
-        <form action="">
+        <form action="#" id = "form">
             <div id="question1" class="content"></div>
             <div class="input">
                 <div class="reponse">
@@ -45,61 +45,61 @@
             <div class="input">
                 <div class="reponse">
                 <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
-                <label for="" id="label_response1"></label>
+                <label for="" id="label_reponse1"></label>
                 </div>
                 <div class="reponse">
                     <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
-                    <label for="" id="label_response2"></label>
+                    <label for="" id="label_reponse2"></label>
                     </div>
                     <div class="reponse">
                         <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
-                        <label for="" id="label_response3"></label>
+                        <label for="" id="label_reponse3"></label>
                         </div>
                         <div class="reponse">
                             <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
-                            <label for="" id="label_response4"></label>
+                            <label for="" id="label_reponse4"></label>
                             </div>
             </div>
             <div  id="question3"  class="content"></div>
             <div class="input">
                 <div class="reponse">
                 <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
-                <label for="" class="label_response"></label>
+                <label for="" class="label_rponse"></label>
                 </div>
                 <div class="reponse">
                     <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
-                    <label for="" class="label_response"></label>
+                    <label for="" class="label_rponse"></label>
                     </div>
                     <div class="reponse">
                         <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
-                        <label for="" class="label_response"></label>
+                        <label for="" class="label_rponse"></label>
                         </div>
                         <div class="reponse">
                             <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
-                            <label for="" class="label_response"></label>
+                            <label for="" class="label_rponse"></label>
                             </div>
             </div>
             <div id="question4"  class="content"></div>
             <div class="input">
                 <div class="reponse">
                 <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
-                <label for="" class="label_response"></label>
+                <label for="" class="label_ponse"></label>
                 </div>
                 <div class="reponse">
                     <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
-                    <label for="" class="label_response"></label>
+                    <label for="" class="label_ponse"></label>
                     </div>
                     <div class="reponse">
                         <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
-                        <label for="" class="label_response"></label>
+                        <label for="" class="label_ponse"></label>
                         </div>
                         <div class="reponse">
                             <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
-                            <label for="" class="label_response"></label>
+                            <label for="" class="label_ponse"></label>
                             </div>
             </div>
             <div class="button">
-                <input type="button" value="valider" class="btn">
+                <input type="submit" value="valider" class="btn">
             </div>
         </form>
     </main>
