--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <body>
     <!--HEADER-->
     <header>
-        <div class="good"></div>
+        <div  class="good" id="good"> </div>
         <a href="#" target="_blank">
             <h1>Quizz Game</h1>
         </a>
-        <div class="bad"></div>
+        <div id="bad" class="bad"> </div>
     </header>
     <main>
         <form action="#" id = "form">
@@ -64,38 +64,38 @@
             <div class="input">
                 <div class="reponse">
                 <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
-                <label for="" class="label_rponse"></label>
+                <label for="" id="label_rponse1"></label>
                 </div>
                 <div class="reponse">
                     <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
-                    <label for="" class="label_rponse"></label>
+                    <label for="" id="label_rponse2"></label>
                     </div>
                     <div class="reponse">
                         <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
-                        <label for="" class="label_rponse"></label>
+                        <label for="" id="label_rponse3"></label>
                         </div>
                         <div class="reponse">
                             <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
-                            <label for="" class="label_rponse"></label>
+                            <label for="" id="label_rponse4"></label>
                             </div>
             </div>
             <div id="question4"  class="content"></div>
             <div class="input">
                 <div class="reponse">
                 <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
-                <label for="" class="label_ponse"></label>
+                <label for="" id="label_ponse1"></label>
                 </div>
                 <div class="reponse">
                     <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
-                    <label for="" class="label_ponse"></label>
+                    <label for="" id="label_ponse2"></label>
                     </div>
                     <div class="reponse">
                         <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
-                        <label for="" class="label_ponse"></label>
+                        <label for="" id="label_ponse3"></label>
                         </div>
                         <div class="reponse">
                             <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
-                            <label for="" class="label_ponse"></label>
+                            <label for="" id="label_ponse4"></label>
                             </div>
             </div>
             <div class="button">
