--- a/index.html
+++ b/index.html
@@ -25,76 +25,76 @@
             <div id="question1" class="content"></div>
             <div class="input">
                 <div class="reponse">
-                <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
+                <input type="radio" name="sugestion1" id="" class="sugestion_input" value="" >
                 <label for="" id="label_response1"></label>
                 </div>
                 <div class="reponse">
-                    <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
+                    <input type="radio" name="sugestion1" id="" class="sugestion_input" value="" >
                     <label for="" id="label_response2"></label>
                     </div>
                     <div class="reponse">
-                        <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
+                        <input type="radio" name="sugestion1" id="" class="sugestion_input" value="" >
                         <label for="" id="label_response3"></label>
                         </div>
                         <div class="reponse">
-                            <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
+                            <input type="radio" name="sugestion1" id="" class="sugestion_input" value="" >
                             <label for="" id="label_response4"></label>
                             </div>
             </div>
             <div id="question2" class="content"></div>
             <div class="input">
                 <div class="reponse">
-                <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
+                <input type="radio" name="sugestion2" id="" class="sugestion_input" value="" >
                 <label for="" id="label_reponse1"></label>
                 </div>
                 <div class="reponse">
-                    <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
+                    <input type="radio" name="sugestion2" id="" class="sugestion_input" value="" >
                     <label for="" id="label_reponse2"></label>
                     </div>
                     <div class="reponse">
-                        <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
+                        <input type="radio" name="sugestion2" id="" class="sugestion_input" value="" >
                         <label for="" id="label_reponse3"></label>
                         </div>
                         <div class="reponse">
-                            <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
+                            <input type="radio" name="sugestion2" id="" class="sugestion_input" value="" >
                             <label for="" id="label_reponse4"></label>
                             </div>
             </div>
             <div  id="question3"  class="content"></div>
             <div class="input">
                 <div class="reponse">
-                <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
+                <input type="radio" name="sugestion3" id="" class="sugestion_input" value="" >
                 <label for="" id="label_rponse1"></label>
                 </div>
                 <div class="reponse">
-                    <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
+                    <input type="radio" name="sugestion3" id="" class="sugestion_input" value="" >
                     <label for="" id="label_rponse2"></label>
                     </div>
                     <div class="reponse">
-                        <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
+                        <input type="radio" name="sugestion3" id="" class="sugestion_input" value="" >
                         <label for="" id="label_rponse3"></label>
                         </div>
                         <div class="reponse">
-                            <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
+                            <input type="radio" name="sugestion3" id="" class="sugestion_input" value="" >
                             <label for="" id="label_rponse4"></label>
                             </div>
             </div>
             <div id="question4"  class="content"></div>
             <div class="input">
                 <div class="reponse">
-                <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
+                <input type="radio" name="sugestion4" id="" class="sugestion_input" value="" >
                 <label for="" id="label_ponse1"></label>
                 </div>
                 <div class="reponse">
-                    <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
+                    <input type="radio" name="sugestion4" id="" class="sugestion_input" value="" >
                     <label for="" id="label_ponse2"></label>
                     </div>
                     <div class="reponse">
-                        <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
+                        <input type="radio" name="sugestion4" id="" class="sugestion_input" value="" >
                         <label for="" id="label_ponse3"></label>
                         </div>
                         <div class="reponse">
-                            <input type="radio" name="sugestion" id="" class="sugestion_input" value="" >
+                            <input type="radio" name="sugestion4" id="" class="sugestion_input" value="" >
                             <label for="" id="label_ponse4"></label>
                             </div>
             </div>
