--- a/index.html
+++ b/index.html
@@ -21,81 +21,81 @@
         <div id="bad" class="bad"> </div>
     </header>
     <main>
-        <form action="#" id = "form">
+        <form action="#" id = "form" method = "get">
             <div id="question1" class="content"></div>
             <div class="input">
                 <div class="reponse">
-                <input type="radio" name="sugestion1" id="" class="sugestion_input" value="" >
-                <label for="" id="label_response1"></label>
+                <input type="radio" name="sugestion1" id="response1" class="sugestion_input" value="response1" >
+                <label for="response1" id="label_response1"></label>
                 </div>
                 <div class="reponse">
-                    <input type="radio" name="sugestion1" id="" class="sugestion_input" value="" >
-                    <label for="" id="label_response2"></label>
+                    <input type="radio" name="sugestion1" id="response2" class="sugestion_input" value="response2" >
+                    <label for="response2" id="label_response2"></label>
                     </div>
                     <div class="reponse">
-                        <input type="radio" name="sugestion1" id="" class="sugestion_input" value="" >
-                        <label for="" id="label_response3"></label>
+                        <input type="radio" name="sugestion1" id="response3" class="sugestion_input" value="response3" >
+                        <label for="response3" id="label_response3"></label>
                         </div>
                         <div class="reponse">
-                            <input type="radio" name="sugestion1" id="" class="sugestion_input" value="" >
-                            <label for="" id="label_response4"></label>
+                            <input type="radio" name="sugestion1" id="response4" class="sugestion_input" value="response4" >
+                            <label for="response4" id="label_response4"></label>
                             </div>
             </div>
             <div id="question2" class="content"></div>
             <div class="input">
                 <div class="reponse">
-                <input type="radio" name="sugestion2" id="" class="sugestion_input" value="" >
-                <label for="" id="label_reponse1"></label>
+                <input type="radio" name="sugestion2" id="reponse1" class="sugestion_input" value="reponse1" >
+                <label for="reponse1" id="label_reponse1"></label>
                 </div>
                 <div class="reponse">
-                    <input type="radio" name="sugestion2" id="" class="sugestion_input" value="" >
-                    <label for="" id="label_reponse2"></label>
+                    <input type="radio" name="sugestion2" id="reponse2" class="sugestion_input" value="reponse2" >
+                    <label for="reponse2" id="label_reponse2"></label>
                     </div>
                     <div class="reponse">
-                        <input type="radio" name="sugestion2" id="" class="sugestion_input" value="" >
-                        <label for="" id="label_reponse3"></label>
+                        <input type="radio" name="sugestion3" id="reponse1" class="sugestion_input" value="reponse3" >
+                        <label for="reponse3" id="label_reponse3"></label>
                         </div>
                         <div class="reponse">
-                            <input type="radio" name="sugestion2" id="" class="sugestion_input" value="" >
-                            <label for="" id="label_reponse4"></label>
+                            <input type="radio" name="sugestion2" id="reponse4" class="sugestion_input" value="reponse4" >
+                            <label for="reponse4" id="label_reponse4"></label>
                             </div>
             </div>
             <div  id="question3"  class="content"></div>
             <div class="input">
                 <div class="reponse">
-                <input type="radio" name="sugestion3" id="" class="sugestion_input" value="" >
-                <label for="" id="label_rponse1"></label>
+                <input type="radio" name="sugestion3" id="rponse1" class="sugestion_input" value="rponse1" >
+                <label for="rponse1" id="label_rponse1"></label>
                 </div>
                 <div class="reponse">
-                    <input type="radio" name="sugestion3" id="" class="sugestion_input" value="" >
-                    <label for="" id="label_rponse2"></label>
+                    <input type="radio" name="sugestion3" id="rponse2" class="sugestion_input" value="rponse2" >
+                    <label for="rponse2" id="label_rponse2"></label>
                     </div>
                     <div class="reponse">
-                        <input type="radio" name="sugestion3" id="" class="sugestion_input" value="" >
-                        <label for="" id="label_rponse3"></label>
+                        <input type="radio" name="sugestion3" id="rponse3" class="sugestion_input" value=rponse3" >
+                        <label for="rponse3" id="label_rponse3"></label>
                         </div>
                         <div class="reponse">
-                            <input type="radio" name="sugestion3" id="" class="sugestion_input" value="" >
-                            <label for="" id="label_rponse4"></label>
+                            <input type="radio" name="sugestion3" id="rponse4" class="sugestion_input" value="rponse4" >
+                            <label for="rponse4" id="label_rponse4"></label>
                             </div>
             </div>
             <div id="question4"  class="content"></div>
             <div class="input">
                 <div class="reponse">
-                <input type="radio" name="sugestion4" id="" class="sugestion_input" value="" >
-                <label for="" id="label_ponse1"></label>
+                <input type="radio" name="sugestion4" id="ponse1" class="sugestion_input" value="ponse1" >
+                <label for="ponse1" id="label_ponse1"></label>
                 </div>
                 <div class="reponse">
-                    <input type="radio" name="sugestion4" id="" class="sugestion_input" value="" >
-                    <label for="" id="label_ponse2"></label>
+                    <input type="radio" name="sugestion4" id="ponse2" class="sugestion_input" value="ponse2" >
+                    <label for="ponse2" id="label_ponse2"></label>
                     </div>
                     <div class="reponse">
-                        <input type="radio" name="sugestion4" id="" class="sugestion_input" value="" >
-                        <label for="" id="label_ponse3"></label>
+                        <input type="radio" name="sugestion4" id="ponse3" class="sugestion_input" value="ponse3" >
+                        <label for="ponse3" id="label_ponse3"></label>
                         </div>
                         <div class="reponse">
-                            <input type="radio" name="sugestion4" id="" class="sugestion_input" value="" >
-                            <label for="" id="label_ponse4"></label>
+                            <input type="radio" name="sugestion4" id="ponse4" class="sugestion_input" value="ponse4" >
+                            <label for="ponse4" id="label_ponse4"></label>
                             </div>
             </div>
             <div class="button">
