--- a/index.html
+++ b/index.html
@@ -14,93 +14,92 @@
 <body>
     <!--HEADER-->
     <header>
-        <div  class="good" id="good"> </div>
+        <div class="good" id="good"> </div>
         <a href="#" target="_blank">
             <h1>Quizz Game</h1>
         </a>
         <div id="bad" class="bad"> </div>
     </header>
     <main>
-        <form action="#" id = "form" method = "get">
+        <form action="#" id="form" method="get">
             <div id="question1" class="content"></div>
             <div class="input">
                 <div class="reponse">
-                <input type="radio" name="sugestion1" id="response1" class="sugestion_input" value="response1" >
-                <label for="response1" id="label_response1"></label>
-                </div>
-                <div class="reponse">
-                    <input type="radio" name="sugestion1" id="response2" class="sugestion_input" value="response2" >
-                    <label for="response2" id="label_response2"></label>
+                    <input type="radio" name="response1" id="response1" class="sugestion_input1" value="response1" >
+                    <label for="response1" id="label_response1"></label>
+                    <div class="reponse">
+                        <input type="radio" name="response2" id="response2" class="sugestion_input2" value="response2">
+                        <label for="response2" id="label_response2"></label>
                     </div>
                     <div class="reponse">
-                        <input type="radio" name="sugestion1" id="response3" class="sugestion_input" value="response3" >
+                        <input type="radio" name="response3" id="response3" class="sugestion_input3" value="response3">
                         <label for="response3" id="label_response3"></label>
-                        </div>
-                        <div class="reponse">
-                            <input type="radio" name="sugestion1" id="response4" class="sugestion_input" value="response4" >
-                            <label for="response4" id="label_response4"></label>
-                            </div>
-            </div>
-            <div id="question2" class="content"></div>
-            <div class="input">
-                <div class="reponse">
-                <input type="radio" name="sugestion2" id="reponse1" class="sugestion_input" value="reponse1" >
-                <label for="reponse1" id="label_reponse1"></label>
-                </div>
-                <div class="reponse">
-                    <input type="radio" name="sugestion2" id="reponse2" class="sugestion_input" value="reponse2" >
-                    <label for="reponse2" id="label_reponse2"></label>
                     </div>
                     <div class="reponse">
-                        <input type="radio" name="sugestion3" id="reponse1" class="sugestion_input" value="reponse3" >
+                        <input type="radio" name="response4" id="response4" class="sugestion_input4" value="response4">
+                        <label for="response4" id="label_response4"></label>
+                    </div>
+                </div>
+                <div id="question2" class="content"></div>
+                <div class="reponse">
+                    <div class="reponse">
+                        <input type="radio" name="reponse1" id="reponse1" class="sugestion_input1" value="reponse1">
+                        <label for="reponse1" id="label_reponse1"></label>
+                    </div>
+                    <div class="reponse">
+                        <input type="radio" name="sugestion2" id="reponse2" class="sugestion_input2" value="reponse2">
+                        <label for="reponse2" id="label_reponse2"></label>
+                    </div>
+                    <div class="reponse">
+                        <input type="radio" name="sugestion3" id="reponse3" class="sugestion_input3" value="reponse3">
                         <label for="reponse3" id="label_reponse3"></label>
-                        </div>
-                        <div class="reponse">
-                            <input type="radio" name="sugestion2" id="reponse4" class="sugestion_input" value="reponse4" >
-                            <label for="reponse4" id="label_reponse4"></label>
-                            </div>
-            </div>
-            <div  id="question3"  class="content"></div>
-            <div class="input">
-                <div class="reponse">
-                <input type="radio" name="sugestion3" id="rponse1" class="sugestion_input" value="rponse1" >
-                <label for="rponse1" id="label_rponse1"></label>
-                </div>
-                <div class="reponse">
-                    <input type="radio" name="sugestion3" id="rponse2" class="sugestion_input" value="rponse2" >
-                    <label for="rponse2" id="label_rponse2"></label>
                     </div>
                     <div class="reponse">
-                        <input type="radio" name="sugestion3" id="rponse3" class="sugestion_input" value=rponse3" >
+                        <input type="radio" name="sugestion4" id="reponse4" class="sugestion_input4" value="reponse4">
+                        <label for="reponse4" id="label_reponse4"></label>
+                    </div>
+                </div>
+                <div id="question3" class="content"></div>
+                <div class="reponse">
+                    <div class="reponse">
+                        <input type="radio" name="rponse1" id="rponse1" class="sugestion_input1" value="rponse1">
+                        <label for="rponse1" id="label_rponse1"></label>
+                    </div>
+                    <div class="reponse">
+                        <input type="radio" name="rponse2" id="rponse2" class="sugestion_input2" value="rponse2">
+                        <label for="rponse2" id="label_rponse2"></label>
+                    </div>
+                    <div class="reponse">
+                        <input type="radio" name="rponse3" id="rponse3" class="sugestion_input3" value="rponse3">
                         <label for="rponse3" id="label_rponse3"></label>
-                        </div>
-                        <div class="reponse">
-                            <input type="radio" name="sugestion3" id="rponse4" class="sugestion_input" value="rponse4" >
-                            <label for="rponse4" id="label_rponse4"></label>
-                            </div>
-            </div>
-            <div id="question4"  class="content"></div>
-            <div class="input">
-                <div class="reponse">
-                <input type="radio" name="sugestion4" id="ponse1" class="sugestion_input" value="ponse1" >
-                <label for="ponse1" id="label_ponse1"></label>
-                </div>
-                <div class="reponse">
-                    <input type="radio" name="sugestion4" id="ponse2" class="sugestion_input" value="ponse2" >
-                    <label for="ponse2" id="label_ponse2"></label>
                     </div>
                     <div class="reponse">
-                        <input type="radio" name="sugestion4" id="ponse3" class="sugestion_input" value="ponse3" >
+                        <input type="radio" name="rponse4" id="rponse4" class="sugestion_input4" value="rponse4">
+                        <label for="rponse4" id="label_rponse4"></label>
+                    </div>
+                </div>
+                <div id="question4" class="content"></div>
+                <div class="reponse">
+                    <div class="reponse">
+                        <input type="radio" name="ponse1" id="ponse1" class="ponse1" value="ponse1">
+                        <label for="ponse1" id="label_ponse1"></label>
+                    </div>
+                    <div class="reponse">
+                        <input type="radio" name="ponse2" id="ponse2" class="ponse2" value="ponse2">
+                        <label for="ponse2" id="label_ponse2"></label>
+                    </div>
+                    <div class="reponse">
+                        <input type="radio" name="ponse3" id="ponse3" class="ponse3" value="ponse3">
                         <label for="ponse3" id="label_ponse3"></label>
-                        </div>
-                        <div class="reponse">
-                            <input type="radio" name="sugestion4" id="ponse4" class="sugestion_input" value="ponse4" >
-                            <label for="ponse4" id="label_ponse4"></label>
-                            </div>
-            </div>
-            <div class="button">
-                <input type="submit" value="valider" class="btn">
-            </div>
+                    </div>
+                    <div class="reponse">
+                        <input type="radio" name="ponse4" id="ponse4" class="ponse4" value="ponse4">
+                        <label for="ponse4" id="label_ponse4"></label>
+                    </div>
+                </div>
+                <div class="button">
+                    <input type="submit" value="valider" class="btn">
+                </div>
         </form>
     </main>
     <footer>
