--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <main>
         <form action="#" id="form" method="get">
             <div id="question1" class="content">
+                <h2></h2>
                 <div class="input">
                     <div class="reponse">
                         <div class="reponse">
@@ -46,6 +47,8 @@
                 </div>
             </div>
             <div id="question2" class="content">
+                <h2></h2>
+                <div class="input">
                 <div class="reponse">
                     <div class="reponse">
                         <input type="radio" name="question2" id="reponse1" class="sugestion_input1" value="">
@@ -64,8 +67,10 @@
                         <label for="reponse4" id="label_reponse4"></label>
                     </div>
                 </div>
+                </div>
             </div>
             <div id="question3" class="content">
+                <h2></h2>
                 <div class="reponse">
                     <div class="reponse">
                         <input type="radio" name="question3" id="rponse1" class="sugestion_input1" value="">
@@ -86,6 +91,8 @@
                 </div>
             </div>
             <div id="question4" class="content">
+
+                <h2></h2>
                 <div class="reponse">
                     <div class="reponse">
                         <input type="radio" name="question4" id="ponse1" class="ponse1" value="">
