--- a/index.html
+++ b/index.html
@@ -120,7 +120,9 @@
                 <input type="submit" value="valider" class="btn">
             </div>
         </form>
-        <div id="score"></div>
+        <h4>score</h4>
+        <div class="score" id="score">
+        </div>
     </main>
     <footer>
 
